--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Sam Cole's Git Achievements <img src='http://www.gravatar.com/avatar/8f16afd41eae6f1576d69ccfd99dd913'/></h2>
-Unlocked       11/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 74 points<br>
+Unlocked       12/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 75 points<br>
 <ul>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -37,22 +37,24 @@ Unlocked       11/      51 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Historian (Level 5)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Stone Mason (Level 4)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Student</div>  <div class="info">Accessed the documentation for a command with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-.html">git-</a>[command] --help</div></li>
+<li><div class="title">Weaver</div>  <div class="info">Investigate old branches by using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-reflog.html">git-reflog</a></div></li>
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-  51 status
-  39 log
-  28 checkout
-  17 commit
+  53 status
+  41 log
+  30 checkout
+  18 commit
   16 add
-  10 stash
-   9 rebase
-   8 branch
-   7 reset
+  11 stash
+  11 rebase
+  10 branch
+   8 reset
    7 diff
    3 help
    3 config
    2 merge
+   1 reflog
    1 achievements
    1 --help
 </pre>
@@ -104,7 +106,6 @@ There are       51 Achievements. Some achievements can be leveled up depending o
 <li><div class="title">Thug</div><div class="info">Forced pushed a branch with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a> -f</div></li>
 <li><div class="title">Traveler</div><div class="info">Streamed changes between another rcs with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-svn.html">git-svn</a> or <a href="http://www.kernel.org/pub/software/scm/git/docs/git-p4.html">git-p4</a>.</div></li>
 <li><div class="title">Tree Trimmer</div><div class="info">Rewrite branches with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-filter-branch.html">git-filter-branch</a></div></li>
-<li><div class="title">Weaver</div><div class="info">Investigate old branches by using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-reflog.html">git-reflog</a></div></li>
 <li><div class="title">Web Designer</div><div class="info">Instantly browse your working repository in gitweb with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-instaweb.html">git-instaweb</a></div></li>
 </ul></div>
 </body></html>
