--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Sam Cole's Git Achievements <img src='http://www.gravatar.com/avatar/8f16afd41eae6f1576d69ccfd99dd913'/></h2>
-Unlocked       14/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 78 points<br>
+Unlocked       15/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 80 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -23,6 +23,7 @@ Unlocked       14/      51 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Apprentice Historian (Level 1)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Apprentice Historian (Level 2)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Apprentice Historian (Level 3)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
+<li><div class="title">Apprentice Presenter (Level 1)</div>  <div class="info">Shows one or more objects (blobs, trees, tags and commits) with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-show.html">git-show</a></div></li>
 <li><div class="title">Apprentice Product Manager (Level 1)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
 <li><div class="title">Apprentice Product Manager (Level 2)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
 <li><div class="title">Apprentice Product Manager (Level 3)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
@@ -43,21 +44,22 @@ Unlocked       14/      51 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-  68 status
-  54 log
+  71 status
+  57 log
   39 checkout
+  25 commit
   23 add
-  22 commit
   15 branch
   14 stash
   13 rebase
+  11 diff
   10 reset
-   9 diff
    3 rm
    3 reflog
    3 merge
    3 help
    3 config
+   2 show
    2 init
    1 achievements
    1 --help
@@ -102,7 +104,6 @@ There are       51 Achievements. Some achievements can be leveled up depending o
 <li><div class="title">Pilgrim</div><div class="info">Performed a rebase using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-rebase.html">git-rebase</a> --onto.</div></li>
 <li><div class="title">Plumber</div><div class="info">Use the internal plumbing commands of git.</div></li>
 <li><div class="title">Postman</div><div class="info">Send a collection of patches from stdin to an IMAP folder with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-imap-send.html">git-imap-send</a></div></li>
-<li><div class="title">Presenter</div><div class="info">Shows one or more objects (blobs, trees, tags and commits) with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-show.html">git-show</a></div></li>
 <li><div class="title">Socialite</div><div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Stamp Collector</div><div class="info">Investigate old branches by using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-reflog.html">git-reflog</a> --date=relative</div></li>
 <li><div class="title">Thug</div><div class="info">Forced pushed a branch with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a> -f</div></li>
