--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Sam Cole's Git Achievements <img src='http://www.gravatar.com/avatar/8f16afd41eae6f1576d69ccfd99dd913'/></h2>
-Unlocked       16/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 110 points<br>
+Unlocked       17/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 112 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -22,6 +22,7 @@ Unlocked       16/      51 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Apprentice Butcher (Level 2)</div>  <div class="info">Performed an interactive rebase using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-rebase.html">git-rebase</a> -i.</div></li>
 <li><div class="title">Apprentice Butcher (Level 3)</div>  <div class="info">Performed an interactive rebase using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-rebase.html">git-rebase</a> -i.</div></li>
 <li><div class="title">Apprentice Cleaning lady (Level 1)</div>  <div class="info">Remove untracked files from the working tree with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-clean.html">git-clean</a></div></li>
+<li><div class="title">Apprentice Collector (Level 1)</div>  <div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
 <li><div class="title">Apprentice Historian (Level 1)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Apprentice Historian (Level 2)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Apprentice Historian (Level 3)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
@@ -51,24 +52,26 @@ Unlocked       16/      51 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-  80 status
-  67 log
+  82 status
+  68 log
   39 checkout
   36 commit
   29 add
   16 rebase
   15 branch
   14 stash
-  12 reset
+  13 reset
   12 diff
-   9 show
+  10 show
+   4 config
    3 rm
    3 reflog
    3 merge
    3 help
-   3 config
    2 init
+   2 fetch
    2 clean
+   1 remote
    1 achievements
    1 --help
 </pre>
@@ -91,7 +94,6 @@ There are       51 Achievements. Some achievements can be leveled up depending o
 <li><div class="title">Cathedral Worker</div><div class="info">Cloned submodule repository and checked out commits specified by superproject.</div></li>
 <li><div class="title">Cherry Picker</div><div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-cherry-pick.html">git-cherry-pick</a> to add a sha from another branch into the current branch.</div></li>
 <li><div class="title">Chimney Sweeper</div><div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-gc.html">git-gc</a> to run a number of housekeeping tasks on the current repository.</div></li>
-<li><div class="title">Collector</div><div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
 <li><div class="title">Delivery Boy</div><div class="info">Move objects and refs by archive with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-bundle.html">git-bundle</a>.</div></li>
 <li><div class="title">Fisherman</div><div class="info">Look for specified patterns in the current repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-grep.html">git-grep</a>.</div></li>
 <li><div class="title">Gardner</div><div class="info">Shows the commit ancestry graph with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-show-branch.html">git-show-branch</a></div></li>
